--- a/src/app/SelectScreen/components/CharacterGrid/CharacterCard/styles.scss
+++ b/src/app/SelectScreen/components/CharacterGrid/CharacterCard/styles.scss
@@ -26,7 +26,7 @@
   overflow: hidden;
 
   &:hover {
-    @extend %animate;
+    animation: backgroundSlide 20s linear infinite, $animationConfig;
 
     &:after {
       content: '';
