refactor: move inline css and url sass helper to app root

--- a/src/app/SelectScreen/components/CharacterGrid/CharacterCard/styles.scss
+++ b/src/app/SelectScreen/components/CharacterGrid/CharacterCard/styles.scss
@@ -1,5 +1,5 @@
 @import '../../../styles/border';
-@import '../../../styles/url';
+@import '../../../../styles/url';
 
 @keyframes backgroundSlide {
   from {
