--- a/src/app/SelectScreen/styles/cursor.scss
+++ b/src/app/SelectScreen/styles/cursor.scss
@@ -1,4 +1,4 @@
-@import './url';
+@import '../../styles/url';
 
 %cursor-default {
   cursor: url(getAsset('assets/images/cursor/default.png')), auto;
